Fix configure call